$NetBSD: CHANGES,v 1.13007 2006/02/20 11:18:52 hiramatsu Exp $

Changes to the packages collection and infrastructure in 2006:

	Updated chat/naim to 0.11.8.1 [wiz 2006-01-01]
	Updated x11/aterm to 1.0.0 [xtraeme 2006-01-01]
	Updated emulators/qemu to 0.8.0 [xtraeme 2006-01-01]
	Updated news/tin to 1.8.0 [wiz 2006-01-01]
	Updated sysutils/gnome-vfs2 to 2.12.1.1nb2 [jmmv 2006-01-01]
	Updated sysutils/nautilus to 2.12.1nb2 [jmmv 2006-01-01]
	Updated net/howl to 1.0.0 [tron 2006-01-01]
	Updated audio/daapd to 0.2.4a [tron 2006-01-01]
	Updated textproc/flyspell to 1.7k [wiz 2006-01-01]
	Updated emulators/DatLib to 2.13 [wiz 2006-01-01]
	Updated emulators/DatUtil to 2.25 [wiz 2006-01-01]
	Updated emulators/MAMEDiff to 2.23 [wiz 2006-01-01]
	Updated emulators/ROMInfo to 2.6 [wiz 2006-01-01]
	Updated emulators/ZIPIdent to 2.7 [wiz 2006-01-01]
	Updated converters/p5-MIME-Base64 to 3.07 [wiz 2006-01-01]
	Updated security/p5-Digest to 1.14 [wiz 2006-01-01]
	Updated security/p5-Digest-MD5 to 2.36 [wiz 2006-01-01]
	Updated www/p5-HTML-Element-Extended to 1.14 [wiz 2006-01-01]
	Updated www/p5-HTML-Parser to 3.48 [wiz 2006-01-01]
	Updated www/p5-HTML-Tree to 3.19.01 [wiz 2006-01-01]
	Updated mail/evolution-data-server to 1.4.2.1 [wiz 2006-01-01]
	Updated pkgtools/pkglint to 4.51 [rillig 2006-01-02]
	Updated mail/sylpheed-devel to 2.2.0beta2 [chris 2006-01-02]
	Updated games/neverball to 1.4.0 [christos 2006-01-02]
	Updated chat/ircservices to 5.0.56nb1 [adrianp 2006-01-02]
	Updated audio/musicbrainz to 2.1.2 [rxg 2006-01-02]
	Updated security/chkrootkit to 0.46a [adrianp 2006-01-02]
	Updated net/tcpflow to 0.21nb1 [adrianp 2006-01-02]
	Added converters/p5-MIME-Base32 version 1.01 [schmonz 2006-01-02]
	Updated www/neon to 0.25.4 [epg 2006-01-02]
	Updated devel/subversion to 1.3.0 [epg 2006-01-02]
	Updated databases/p5-perl-ldap to 0.33 [veego 2006-01-02]
	Updated net/samba to 3.0.21a [jlam 2006-01-02]
	Updated net/ethereal to 0.10.14 [salo 2006-01-02]